# agentic-rag-chatbot

./: .env.example  .gitignore  ARCHITECTURE.md  COMPANY_MEMORY.md  Makefile  README.md  USER_MEMORY.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
artifacts/: sanity_output.json
experiments/: multi_modal_rag.ipynb  test_queries.txt
scripts/: evaluate_pipeline.py  run_sanity.py  sanity_check.sh  test_pipeline.py
src/app/: config.py  logger.py  utils.py
src/app/generation/: __init__.py  generator.py  prompts.py
src/app/ingestion/: __init__.py  chunker.py  indexer.py  parser.py  pipeline.py
src/app/memory/: __init__.py  memory_extractor.py  memory_manager.py  memory_writer.py
src/app/retrieval/: __init__.py  retriever.py
src/app/routing/: __init__.py  router.py
tests/: test_rag_pipeline.py  test_router.py
